@@ -11,6 +11,7 @@ if(APPLE)
 endif()
 
 set(PLATFORM_SRC)
+set(QT_STATIC OFF)
 
 if(BUILD_SDL)
 	if(NOT SDL_FOUND AND NOT SDL2_FOUND)
@@ -36,6 +37,12 @@ if(NOT Qt5OpenGL_FOUND OR NOT Qt5Widgets_FOUND OR NOT OPENGL_FOUND)
 	message(WARNING "Cannot find Qt modules")
 	set(BUILD_QT OFF PARENT_SCOPE)
 	return()
+endif()
+
+get_target_property(QT_TYPE Qt5::Core TYPE)
+if(QT_TYPE STREQUAL STATIC_LIBRARY)
+	set(QT_STATIC ON)
+	add_definitions(-DQT_STATIC)
 endif()
 
 set(SOURCE_FILES
@@ -96,6 +103,9 @@ if(Qt5Multimedia_FOUND)
 	list(APPEND AUDIO_SRC
 		AudioProcessorQt.cpp
 		AudioDevice.cpp)
+	if (WIN32 AND QT_STATIC)
+		list(APPEND QT_LIBRARIES qtaudio_windows strmiids winmm)
+	endif()
 	list(APPEND QT_LIBRARIES Qt5::Multimedia)
 	add_definitions(-DBUILD_QT_MULTIMEDIA)
 	set(CPACK_DEBIAN_PACKAGE_DEPENDS "${CPACK_DEBIAN_PACKAGE_DEPENDS},libqt5multimedia5")
@@ -120,6 +130,9 @@ qt5_add_resources(RESOURCES resources.qrc)
 if(WIN32)
 	configure_file(${CMAKE_SOURCE_DIR}/res/mgba.rc.in ${CMAKE_BINARY_DIR}/res/mgba.rc)
 	list(APPEND RESOURCES ${CMAKE_BINARY_DIR}/res/mgba.rc)
+	if(QT_STATIC)
+		list(APPEND QT_LIBRARIES qwindows imm32)
+	endif()
 endif()
 add_executable(${BINARY_NAME}-qt WIN32 MACOSX_BUNDLE main.cpp ${CMAKE_SOURCE_DIR}/res/mgba.icns ${SOURCE_FILES} ${PLATFORM_SRC} ${UI_FILES} ${AUDIO_SRC} ${RESOURCES})
 set_target_properties(${BINARY_NAME}-qt PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_SOURCE_DIR}/res/info.plist.in COMPILE_DEFINITIONS "${FEATURE_DEFINES}")
