@@ -42,6 +42,7 @@ Misc:
  - All: Fix sanitize-deb script to set file permissions properly if run as (fake)root
  - GBA SIO: Add a dummy driver for Normal mode
  - GBA: GBARewind now returns how many states it has rewound
+ - All: Enable static linking for Windows
 
 0.2.1: (2015-05-13)
 Bugfixes:
